# GuruGao-House-Price-

./: Home.py  main.py  pyproject.toml  requirements.txt
Backend/: .env  chatbot.py
eda/: Baseline.ipynb  DataCleaning.ipynb  EDA.ipynb  HousesClean.ipynb  ModelSelection.ipynb  df.pkl  eda_outlier.csv  featureSelection.ipynb  final.csv  final_df.csv  flats_cleaned.csv  houses_cleaned.csv  missing.csv  missing.ipynb
pages/: ChatBot.py  Price Predictior.py  Recommender.py
